# spyder_to_get_number

./: README.md  hello.py  pyproject.toml  学校选择.xlsx  学校选择1.xlsx
err/: err_log.txt
src/: db.py  get_data.py  get_plan.py  temp.py  temp2.py  update_plan.py
